<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="facebook_app_id">1553491584880392</string>
    <string name="app_name">Mathematicously</string>
    <string name="nuova_partita">Nuova partita</string>
    <string name="about">Info</string>
    <string name="exit_confirm">Vuoi uscire dal gioco?</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="game_riflessi">Riflessi</string>
    <string name="game_scrivi_la_risposta">Scrivi la risposta</string>
    <string name="game_sfida_contro_il_tempo">Sfida contro il tempo</string>
    <string name="game_quiz_show">Quiz Show</string>
    <string name="game_endurance">Endurance</string>
    <string name="game_memory">Memory</string>
    <string name="game_sfida_un_amico">Sfida un amico</string>
    <string name="game_truefalse">Vero o Falso?</string>
    <string name="difficolta_facile">Facile</string>
    <string name="difficolta_medio">Medio</string>
    <string name="difficolta_difficile">Difficile</string>
    <string name="difficolta_casuale">Casuale</string>
    <string name="label_scrivi_risposta_risposta">"Risposta: "</string>
    <string name="errorEmptyString">Devi inserire una risposta!</string>
    <string name="risposta_esatta">Risposta esatta!</string>
    <string name="risposta_errata">Risposta errata!</string>
    <string name="bluetooth_non_disponibile">Per poter giocare in multiplayer è necessario un dispositivo che abbia il Bluetooth.\nPer giocare su internet con i tuoi amici, scarica Math Challenger.</string>
    <string name="scarica_mathchallenger">Scarica Math Challenger</string>
    <string name="multi_host">Crea partita</string>
    <string name="multi_guest">Unisciti</string>
    <string name="indietro">Indietro</string>
    <string name="twitter_text">Ho totalizzato %1$d punti rispondendo correttamente a %2$d domande su %3$d</string>
    <string name="twitter_text_multi_vittoria">Ho vinto contro %1$s totalizzando %2$d punti</string>
    <string name="twitter_text_multi_sconfitta">Ho perso contro %1$s totalizzando %2$d punti</string>
    <string name="facebook_text">Ho totalizzato %1$d punti rispondendo correttamente a %2$d domande su %3$d nella modalità %4$s giocando a difficoltà %5$s</string>
    <string name="facebook_text_multi_vittoria">Ho vinto contro %1$s nella modalità %2$s totalizzando %3$d punti</string>
    <string name="facebook_text_multi_sconfitta">Ho perso contro %1$s nella modalità %2$s totalizzando %3$d punti</string>
    <string name="fine_partita_punti">Punti: %1$d/100</string>
    <string name="fine_partita_difficolta">Difficoltà: %1$s</string>
    <string name="share_on">Condividi su:</string>
    <string name="nessuna_stat">Statistiche non disponibili</string>
    <string name="connessione_non_attiva">Connessione internet non disponibile</string>
    <string name="about_logo_text">%1$s v.%2$s release %3$s</string>
    <string name="follow">Seguici su:</string>
    <string name="available">Disponibile su:</string>
    <string name="ip_address">Indirizzo IP</string>
    <string name="lobby_wifi">Lobby WiFi</string>
    <string name="lobby">Lobby</string>
    <string name="scegliNickname">Scegli il tuo nickname</string>
    <string name="ok">OK</string>
    <string name="connection_lost">Connessione persa</string>
    <string name="nickname_vuoto">Devi inserire un nickname</string>
    <string name="attesa_connessione">In attesa del client</string>
    <string name="connetti">Connetti</string>
    <string name="disconnetti">Disconnetti</string>
    <string name="fine_multi_sconfitta">Hai perso</string>
    <string name="fine_multi_vittoria">Hai vinto</string>
    <string name="attendi_title">Attendi&#8230;&#8230;&#8230;</string>
    <string name="attendi_messaggio">In attesa dell\'avversario</string>
	<string name="attendi_selezione_gioco">Attendi che il gioco venga scelto</string>
	<string name="lobby_bt">Lobby Bluetooth</string>
	<string name="start_server">Avvia Server</string>
	<string name="avvertenza_wifi">Per poter giocare devi connetterti alla stessa rete WiFi del server</string>
	<string name="hint_wifi_address">es. 192.168.0.2</string>
	<string name="hint_nickname">Nickname</string>
	<string name="connetti_button">Connetti</string>
	<string name="wifi_non_abilitato">Devi abilitare il WiFi</string>
	<string name="ip_address_non_valido">Indirizzo IP non valido</string>
</resources>
