<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/titoloWFC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/lobby_wifi"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/avvertenzaWFC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/titoloWFC"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/avvertenza_wifi" />

    <LinearLayout
        android:id="@+id/containerWFC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/avvertenzaWFC"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ip_address" />

        <EditText
            android:id="@+id/ipaddressWFC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:digits="0123456789."
            android:ems="10"
            android:hint="@string/hint_wifi_address" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scegliNickname" />

        <EditText
            android:id="@+id/nicknameWFC"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/hint_nickname" />
    </LinearLayout>

    <it.pinoelefante.mycustomviews.PButton
        android:id="@+id/backWFC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/style_arrow_back" />

    <it.pinoelefante.mycustomviews.PButton
        android:id="@+id/wifi_connect_server"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:onClick="connettiWiFi"
        android:text="@string/connetti_button"
        android:layout_below="@id/containerWFC" />

</RelativeLayout>