<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/titolo_BTC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/lobby_bt"
        android:textSize="24sp" />
    
    <LinearLayout 
        android:id="@+id/cont_nick_bluetooth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titolo_BTC"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scegliNickname" />
        
        <EditText 
            android:id="@+id/Nickname_BTC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nickname" />
    </LinearLayout>

    <it.pinoelefante.mycustomviews.PButton
        android:id="@+id/back_BTC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/style_arrow_back"
        android:onClick="back" />

	<ListView
		android:id="@+id/bt_list_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/back_BTC"
        android:layout_below="@id/cont_nick_bluetooth" />
        
</RelativeLayout>